# audio2face_api

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: mark_solved.usd  mark_solved_streaming.usd
src/audio2face_api/: A2E.py  A2E_CONFIG.py  A2F.py  A2F_CONFIG.py  Buffer.py  LiveLink.py  http_client.py
src/audio2face_api/grpc/: audio2face_pb2_grpc.py
tests/: test_api.py  test_api_stream.py
