[project]
name = "audio2face_api"
version = "0.1.2"
authors = [{ name = "Oussama SILEM", email = "jo_silem@esi.dz" }]
description = "Python Implementation of the Audio2Face Headless API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "cffi",
    "comtypes",
    "grpcio",
    "numpy",
    "protobuf==3.20.0",
    "psutil",
    "pycaw",
    "requests",
    "soundfile",
]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"
